src/test/ui/for/for-loop-refutable-pattern-error-message.stderr
error[E0005]: refutable pattern in `for` loop binding: `&_` not covered
  --> $DIR/for-loop-refutable-pattern-error-message.rs:12:9
   |
LL |     for &1 in [1].iter() {} //~ ERROR refutable pattern in `for` loop binding
   |         ^^ pattern `&_` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
